{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 75,
  "lineage": "3b9ee7fb-b381-7287-aef3-02ee53a1747d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkins_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bce0ca39aa5e0435",
            "associate_with_private_ip": "10.20.0.10",
            "association_id": "eipassoc-000427792bb8fbef1",
            "domain": "vpc",
            "id": "eipalloc-0bce0ca39aa5e0435",
            "instance": "i-0096b82de931c23cb",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0545b452c034b3b6f",
            "private_dns": "ip-10-20-0-10.us-east-2.compute.internal",
            "private_ip": "10.20.0.10",
            "public_dns": "ec2-18-218-78-23.us-east-2.compute.amazonaws.com",
            "public_ip": "18.218.78.23",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.jenkins_internet_gw",
            "aws_vpc.jenkins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-builder1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ee5c62243ab25259",
            "arn": "arn:aws:ec2:us-east-2:148456778653:instance/i-0db32e5b1abdd707c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "instance_profile",
            "id": "i-0db32e5b1abdd707c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "builder_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-096a971175d87e52d",
            "private_dns": "ip-10-20-0-11.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.0.11",
            "public_ip": "3.142.54.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b77c28d71272da71",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0573cae0c5364a532",
            "tags": {
              "Name": "jenkins_builder1"
            },
            "tags_all": {
              "Name": "jenkins_builder1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ae91fad40f30f855"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.jenkins_instance_profile",
            "aws_key_pair.builder-key-pair",
            "aws_security_group.jenkins_master_security_group",
            "aws_subnet.jenkins_subnet",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d68d031be2577777",
            "arn": "arn:aws:ec2:us-east-2:148456778653:instance/i-0096b82de931c23cb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0096b82de931c23cb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "master_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0545b452c034b3b6f"
              }
            ],
            "primary_network_interface_id": "eni-0545b452c034b3b6f",
            "private_dns": "ip-10-20-0-10.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.0.10",
            "public_ip": "18.218.78.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a67d8ee5cf285278",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0573cae0c5364a532",
            "tags": {
              "Name": "jenkins-master"
            },
            "tags_all": {
              "Name": "jenkins-master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ae91fad40f30f855"
            ]
          },
          "dependencies": [
            "aws_key_pair.jenkins_auth",
            "aws_network_interface.jenkins_master_network_interface",
            "aws_security_group.jenkins_master_security_group",
            "aws_subnet.jenkins_subnet",
            "aws_vpc.jenkins_vpc",
            "data.aws_ami.ubuntu_2004"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jenkins_internet_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:148456778653:internet-gateway/igw-0fe3b74216c24885f",
            "id": "igw-0fe3b74216c24885f",
            "owner_id": "148456778653",
            "tags": {
              "Name": "jenkins_internet_gw"
            },
            "tags_all": {
              "Name": "jenkins_internet_gw"
            },
            "vpc_id": "vpc-0d8064efdf796e64c"
          },
          "dependencies": [
            "aws_vpc.jenkins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "jenkins_master_network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:148456778653:network-interface/eni-0545b452c034b3b6f",
            "attachment": [
              {
                "attachment_id": "eni-attach-09ec0bc32c163b1ae",
                "device_index": 0,
                "instance": "i-0096b82de931c23cb"
              }
            ],
            "id": "eni-0545b452c034b3b6f",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:26:52:84:38:50",
            "owner_id": "148456778653",
            "private_ip": "10.20.0.10",
            "private_ip_list": [
              "10.20.0.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.20.0.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0ae91fad40f30f855"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0573cae0c5364a532",
            "tags": {
              "Name": "jenkins_master_network_interface"
            },
            "tags_all": {
              "Name": "jenkins_master_network_interface"
            }
          },
          "dependencies": [
            "aws_security_group.jenkins_master_security_group",
            "aws_subnet.jenkins_subnet",
            "aws_vpc.jenkins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "jenkins_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fe3b74216c24885f",
            "id": "r-rtb-0f1d5693405699d871080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f1d5693405699d87",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.jenkins_internet_gw",
            "aws_route_table.jenkins_route_table",
            "aws_vpc.jenkins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jenkins_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:148456778653:route-table/rtb-0f1d5693405699d87",
            "id": "rtb-0f1d5693405699d87",
            "owner_id": "148456778653",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fe3b74216c24885f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jenkins_route_table"
            },
            "tags_all": {
              "Name": "jenkins_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8064efdf796e64c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jenkins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jenkins_route_table_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fbe3693f971c944",
            "route_table_id": "rtb-0f1d5693405699d87",
            "subnet_id": "subnet-0573cae0c5364a532"
          },
          "dependencies": [
            "aws_route_table.jenkins_route_table",
            "aws_subnet.jenkins_subnet",
            "aws_vpc.jenkins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_builder_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:148456778653:security-group/sg-07b620f6c6f3854b2",
            "description": "Allow connection to jenkins buider machines from master",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b620f6c6f3854b2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow access from the jenkins_master security group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0ae91fad40f30f855"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "builder_security_group",
            "name_prefix": "",
            "owner_id": "148456778653",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "buider_security_group"
            },
            "tags_all": {
              "Name": "buider_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8064efdf796e64c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jenkins_master_security_group",
            "aws_vpc.jenkins_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_master_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:148456778653:security-group/sg-0ae91fad40f30f855",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae91fad40f30f855",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP to VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS to VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh to VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "148456778653",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_and_ssh_access"
            },
            "tags_all": {
              "Name": "web_and_ssh_access"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8064efdf796e64c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jenkins_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jenkins_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:148456778653:subnet/subnet-0573cae0c5364a532",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.20.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0573cae0c5364a532",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148456778653",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jenkins_subnet"
            },
            "tags_all": {
              "Name": "jenkins_subnet"
            },
            "vpc_id": "vpc-0d8064efdf796e64c"
          },
          "dependencies": [
            "aws_vpc.jenkins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jenkins_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:148456778653:vpc/vpc-0d8064efdf796e64c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0e1476aea077f2b7a",
            "default_route_table_id": "rtb-0b7750fa2d4285504",
            "default_security_group_id": "sg-0a6f107e3badedcdf",
            "dhcp_options_id": "dopt-358ced5e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d8064efdf796e64c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b7750fa2d4285504",
            "owner_id": "148456778653",
            "tags": {
              "Name": "jenkins_vpc"
            },
            "tags_all": {
              "Name": "jenkins_vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}